Icon overlapping fix

--- a/src/App.css
+++ b/src/App.css
@@ -375,7 +375,7 @@
     height: 75px;
     justify-content: center;
     align-items: center;
-    background-color: #fcfcfc;
+
 }
 
 .service-title {
